# $Id$

Version 0.4.0-pre1 (latest)
+ Corrected segfault when using BIND output with SRV records
+ Fixed off-by-one string termination problem
+ Fixed a number of possible segfaults if required cmdline options were missing
  Thanks Steve Ayotte (sayotte.alkaloid.net)
+ Added more verbose LDAP error and sanity checking output
+ Removed (some) deprecated LDAP API calls

Version 0.3.7
+ Changed default location of ldap.conf to /etc/ldap.conf
+ Added note on potential security vulns in deprecated/webadmin to README
+ Changed port declarations/format strings from int to unsigned short
  to match standards
+ Updated doc/README.html
+ Added security audit result patch from Erik Cabetas (erik.cabetas.com)
+ Fixed typo in ldap2dns.spec.in
+ Updated example ldif in doc/ (Thanks Marc Huot)

Version 0.3.6
+ New maintainer: Ben Klang <ben@alkaloid.net>
+ Fixed bug with duplicate OIDs in dns.schema from partially applied patch
+ Renamed schema file to ldap2dns.schema
+ Updated RPM specfile
+ Removed already merged patchfiles
+ Restructured file layout, created doc directory
+ Deprecated unfinished webadmin work.  Will be replaced with Beatnik
+ Deprecated OpenLDAP 2.0 schema support
+ Deprecated djbdns-1.0.5 native LDAP patch (status of patch unknown)
+ Removed old index.html
+ Removed TODO.schema
+ Updated Makefile
+ Modified ldap2dns-conf to behave more like tinydns-conf
+ Altered default behavior (via ldap2dns-conf) to run ldap2dns as non-root
+ Updated FAQ
+ Deprecated askldap.c and askldap.h
+ Created TODO file
+ Added TinyDNS data file import script (scripts/data2ldap.pl)
+ Moved AXFR import script (formerly import.pl) to scripts/axfr2ldap.pl
+ Deprecated export-ldap.pl (Possibly old ldap2dns 0.2->0.3 upgrade script?)

Version 0.3.5 - 2005/11/30
+ Added support for DNS SRV records

Version 0.3.3
- Removed a bug which caused ldap2dns to etablish more than one connections
  to the LDAP server.

Version 0.3.2
+ Only patches from Martin Lesser <m-lesser@better-com.de>