@@ -1,4 +1,15 @@
-1) What happened to the webadmin directory?
+1) Where can I find a web interface?
+2005-06-06 bklang
+
+The official web interface of ldap2dns is "Beatnik."  Beatnik is a module for
+the Horde framework (http://www.horde.org).  Beatnik is actively developed and
+should be ready for release soon.  Early adopters are encouraged to checkout
+the code from SVN trunk.  The author uses Beatnik productively today.
+
+See http://projects.alkaloid.net for more information.
+
+
+2) What happened to the webadmin directory?
 
 2005-12-22 bklang
 ** See security note at the end of this section regarding the old webadmin **
@@ -25,7 +36,8 @@ responsibility for any problems related to the flawed webadmin code.
 
 Thanks to Erik Cabetas for bringing these issues to my attention.
 
-2) Why have you deprecated all that code?
+
+3) Why have you deprecated all that code?
 
 2005-12-07 bklang
 This is partially answered above, but to fully answer the question it's not
